Fix Collapse Text Bugs

--- a/src/index.sass
+++ b/src/index.sass
@@ -104,13 +104,13 @@ body
     @apply rounded-2xl py-5 px-6 bg-gray20 text-white
 
   .collapse-text
-    @apply text-sm text-gray100 leading-7
+    @apply text-sm text-gray100 leading-6 mb-2 md:leading-7
 
   .collapse-title
-    @apply text-sm font-medium text-white leading-7
+    @apply text-sm font-medium text-white mb-2 md:leading-7
 
   .open-collapse
-    @apply transition-all duration-500 ease-in-out mb-6 mt-5 max-h-[400px]
+    @apply transition-all duration-500 ease-in-out mb-2 mt-5
     opacity: 1
 
   .close-collapse
